<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">凹凸钉</string>
    <string name="status_ready">就绪</string>
    <string name="start_task">启动任务</string>
    <string name="stop_task">停止任务</string>
    <string name="add_task">添加任务</string>
    <string name="status">状态</string>
    <string name="tasks">任务列表</string>
    <string name="query_via_qq">配置主要通过QQ消息（上方按钮可快速调整）。监听需在系统设置手动开启。</string>
</resources>